# trinitas-agents

./: .gitignore  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SPECIFICATION.md  INSTALLATION.md  README.md  TMWS_SETUP_INSTRUCTIONS.md  TRINITAS-AGENTS.md  TRINITAS-BASE.md  TRINITAS-CORE-PROTOCOL.md  TRINITAS-ORCHESTRATOR.md  TRINITAS-TASK-INTEGRATION.md  TRINITAS_EMERGENCY_FIXES.md  TRINITAS_PERSONA_DEFINITIONS.yaml  UPGRADE_PLAN.md  VALIDATION_REPORT.md  build_agents_md.sh  build_trinitas_docs.sh  config.yaml  deploy_trinitas_docs.sh  install.sh  install_to_claude.sh  requirements.txt  ruff_results.json  session_info.json  setup.py  setup_all.sh  test_final_integration.py  trinitas.yaml  upgrade.sh  verify_installation.sh
hooks/python/: README.md  centaureissi_core.py  collaboration_patterns.py  conflict_resolver.py  deep_research.py  enhanced_quality_check.py  integrate_parallel_results.py  pattern_analyzer.py  prepare_parallel_tasks.py  pyproject.toml  research_cache.py  security_scanner.py  setup_uv.sh
hooks/python/tests/: __init__.py  test_analyzers.py
hooks/python/trinitas_hooks/: __init__.py  analyzers.py  core.py  logging.py  mcp_client.py  quality.py
tmws/: .env.example  .gitignore  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  __init__.py  __main__.py  alembic.ini  claude_mcp_config.json  install.sh  main.py  mcp_config.json  mcp_server.py  pyproject.toml  requirements.txt  tactical_port_manager.sh  unified_server.py
tmws/config/: tmws_unified.yaml  unified_server.yaml
tmws/config/security/: security.yml
tmws/migrations/: env.py
tmws/migrations/versions/: 001_fix_vector_dimension.py
tmws/scripts/: schema.sql  security_setup.py  start_mcp_server.py  tactical_cli.py  validate_tactical_system.py
tmws/src/: __init__.py  main.py  mcp_server_v2.py
tmws/src/api/: __init__.py  app.py  middleware.py  middleware_redis.py  security.py
tmws/src/api/routers/: __init__.py  health.py  memory.py  persona.py  task.py  workflow.py
tmws/src/core/: config.py  config_loader.py  database.py  exceptions.py  process_manager.py  tactical_coordinator.py  unified_database.py
tmws/src/integration/: __init__.py  fastapi_mcp_bridge.py  fastapi_mcp_bridge_enhanced.py
tmws/src/security/: __init__.py  audit_integration.py  audit_logger.py  audit_logger_async.py  html_sanitizer.py  middleware.py  rate_limiter.py  validators.py
tmws/src/services/: __init__.py  log_cleanup_service.py  memory_service.py  persona_service.py  task_service.py  unified_memory_service.py  vectorization_service.py  workflow_history_service.py  workflow_service.py
tmws/src/tools/: __init__.py  base_tool.py  learning_tools.py  memory_tools.py  persona_tools.py  system_tools.py  task_tools.py  workflow_tools.py
trinitas-mcp/: .env.example  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  __init__.py  dependency_injection.py  docker-compose.yml  install_v4.sh  mcp_server.json  pyproject.toml  refactored_architecture.py  setup_hybrid.sh
trinitas-mcp-server/hybrid-mcp/: __init__.py  pyproject.toml
trinitas-mcp-server/hybrid-mcp/claude/: __init__.py  claude_optimized.py
trinitas-mcp-server/hybrid-mcp/core/: hybrid_server.py
trinitas-mcp-server/hybrid-mcp/tests/: test_hybrid.py
trinitas-mcp-server/hybrid-mcp/universal/: __init__.py  universal_impl.py
trinitas-mcp-v4/: README.md  install_v4.sh  pyproject.toml
trinitas-mcp-v4/chromadb_data/: chroma.sqlite3
trinitas-mcp-v4/config/: .env
trinitas-mcp-v4/learning_data/metrics/: 20250828.jsonl
trinitas-mcp-v4/learning_data/patterns/: pattern_20250828_215600_14c68615.json
trinitas-mcp-v4/src/: learning_system.py  mcp_server_v4.py  memory_manager_v4.py
trinitas-mcp/.claude/commands/: trinitas.md
trinitas-mcp/chromadb_data/: chroma.sqlite3
trinitas-mcp/config/: claude_mcp_settings.json  config.yaml  naming_mode.yaml  persona_rename_config.yaml  personas.yaml  production.env
trinitas-mcp/docs/: FINAL_REPORT.md  INTEGRATION_COMPLETION_REPORT.md  LOCAL_LLM_INTEGRATION.md  MEMORY_STORAGE_ANALYSIS.md  MEMORY_SYSTEM_DESIGN.md  PHASE2_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_ADVANCED_FEATURES.md  PRODUCTION_GUIDE.md  SEMANTIC_SEARCH_USE_CASES.md
trinitas-mcp/docs/phase2-3/: ASYNC_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_FIX_COMPLETE_REPORT.md
trinitas-mcp/docs/phase2-3/architecture/: dependency_map.md  persona_logic_specs.md
trinitas-mcp/docs/phase2-3/development/: EXCEPTION_HANDLING_BEST_PRACTICES.md  refactoring_guidelines.md
trinitas-mcp/docs/phase2-3/troubleshooting/: common_issues.md
trinitas-mcp/examples/: advanced_usage.py  basic_usage.py  examples.py  integration_showcase.py  memory_system_demo.py  mode_switching_demo.py  workflow_usage.py
trinitas-mcp/learning_data/patterns/: pattern_20250828_215559_47fb52e6.json
trinitas-mcp/scripts/: deploy.sh  install_with_uv.sh  migrate_to_hybrid.py
trinitas-mcp/src/: __main__.py  async_database_manager.py  async_memory_manager_v4.py  async_transaction_manager.py  bellona_distributor.py  cli.py  eris_distributor.py  exception_replacer.py  learning_system.py  llm_router.py  local_llm_client.py  mcp_server.py  mcp_server_fastmcp.py  mcp_server_v4.py  memory_architecture.py  memory_manager_v4.py  muses_monitor.py  performance_optimizer.py  security_utils.py  seshat_monitor.py
trinitas-mcp/src/core/: __init__.py  engine_client.py  local_llm_client.py  trinitas_mcp_tools.py  trinitas_mode_manager.py
trinitas-mcp/src/mcp_server_impl/: mcp_server.py
trinitas-mcp/src/memory/: benchmark.py  enhanced_manager.py  hybrid_backend.py  mcp_memory_tools.py  memory_core.py  memory_manager.py
trinitas-mcp/src/memory/advanced/: __init__.py  persona_embeddings.py
trinitas-mcp/src/services/: cache_manager.py  context_manager.py  performance_optimizer.py  session_orchestrator.py
trinitas-mcp/src/utils/: rename_personas.py
trinitas-mcp/tests/: test_integration.py
trinitas-mcp/tests/integration/: test_full_local_mode.py  test_local_llm_integration.py  test_mcp_tools.py  test_mode_switching.py
trinitas-mcp/visualization/: memory_visualizer.html
(+265 files in other folders)
