[project]
name = "tmws"
version = "1.0.0"
description = "Trinitas Memory & Workflow Service - PostgreSQL-based backend for Trinitas agents"
authors = [
    {name = "Trinitas Development Team", email = "dev@trinitas.ai"}
]
requires-python = ">=3.10"
dependencies = [
    # MCP Server dependencies
    "fastmcp>=0.1.0",
    "mcp>=0.9.0",
    # Core dependencies (kept for bridge pattern)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.7",
    "pgvector>=0.2.4",
    "greenlet>=3.0.0",
    # Vector search
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.2",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    "cryptography>=41.0.0",
    # Background Tasks
    "celery>=5.3.0",
    "redis>=5.0.0",
    # Monitoring
    "prometheus-client>=0.19.0",
    # Production server
    "gunicorn>=21.0.0",
    "watchfiles>=0.20.0",
    # Required by starlette
    "itsdangerous>=2.0.0",
    "psutil>=7.0.0",
    "geoip2>=5.1.0",
    "maxminddb>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "ruff>=0.1.9",
    "pre-commit>=3.6.0",
]

monitoring = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--verbose --cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
