[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trinitas-mcp-v4"
version = "4.0.0"
description = "Trinitas v4.0 - Memory-focused MCP Implementation"
authors = [
    {name = "Trinitas Development Team"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.11.3",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
    "sqlite-utils>=3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
trinitas-v4 = "src.mcp_server_v4:main"

[tool.mcp]
name = "trinitas-mcp-v4"
version = "4.0.0"
description = "Memory and Learning focused MCP server for Trinitas"