[project]
name = "trinity-hybrid-mcp"
version = "1.0.0"
description = "Hybrid MCP Server for Trinity - Supports both Claude Code and Universal clients"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.5",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]